Looking to make this project in css.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
     <title>MojoSocial</title>
 </head>
+
 <body>
-    <h1>This is gonna be so fire!</h1>
+    <!--NAV-BAR SECTION-->
+    <nav>
+        <div class="container">
+            <h1 class="container__logo">
+                Nokosocial
+            </h1>
+            <div class="container__search">
+                <!--search bar icon inside the text box-->
+                <i class="uil uil-search"></i>
+                <input type="text" placeholder="search-for-anything">
+            </div>
+            <div class="container__last">
+                <label class="container__cta button button__primary">
+                    Create
+                </label>
+                <div class="container__profile">
+                    <img src="./images/profile-1.jpg">
+                </div>
+            </div>
+        </div>    
+    </nav>
 </body>
+
 </html>
