--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 <body>
     <!--NAV-BAR SECTION-->
     <nav>
-        <div class="container">
-            <h1 class="container__logo">
+        <div class="header container">
+            <h1 class="header__logo">
                 Nokosocial
             </h1>
-            <div class="container__search">
+            <div class="header__search">
+                <input type="search" placeholder="search-for-anything">
                 <!--search bar icon inside the text box-->
                 <i class="uil uil-search"></i>
-                <input type="text" placeholder="search-for-anything">
             </div>
-            <div class="container__last">
-                <label class="container__cta button button__primary">
+            <div class="header__last">
+                <label class="header__cta button button__primary">
                     Create
                 </label>
-                <div class="container__profile">
+                <div class="header__profile">
                     <img src="./images/profile-1.jpg">
                 </div>
             </div>
