--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.6/css/unicons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <title>MojoSocial</title>
 </head>
 
@@ -14,12 +14,12 @@
     <nav>
         <div class="header container">
             <h1 class="header__logo">
-                Nokosocial
+                Mojosocial
             </h1>
             <div class="header__search">
                 <input type="search" placeholder="search-for-anything">
                 <!--search bar icon inside the text box-->
-                <i class="uil uil-search"></i>
+                <i class="fa-solid fa-magnifying-glass"></i>
             </div>
             <div class="header__last">
                 <label class="header__cta button button__primary">
@@ -31,6 +31,20 @@
             </div>
         </div>    
     </nav>
+    <!--MAIN-->
+    <main>
+        <div class="main container">
+            <div class="main__left">
+                <div>Menu</div>
+            </div>
+            <div class="main__middle">
+                <div>Feed</div>
+            </div>
+            <div class="main__right">
+                <div>Other Notis</div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
