making sure grid is working!

--- a/index.html
+++ b/index.html
@@ -29,19 +29,46 @@
                     <img src="./images/profile-1.jpg">
                 </div>
             </div>
-        </div>    
+        </div>
     </nav>
     <!--MAIN-->
     <main>
         <div class="main container">
+        <!--===========LEFT-GRID=======================-->
             <div class="main__left">
-                <div>Menu</div>
+                <!--PROFILE-->
+                <div class="profile">
+                    <img src="./images/profile-1.jpg">
+                    <h4  class="profile__handle">Diana</h4>
+                    <p class="text-muted">@diana</p>
+                </div>
+                <!--SIDEBAR-->
+                <div class="sidebar">
+                   <a class="sidebar-item">
+                   
+                   </a>
+                   <a class="sidebar-item">
+
+                   </a>
+                   <a class="sidebar-item">
+
+                   </a>
+                   <a class="sidebar-item">
+
+                   </a>
+                   <a class="sidebar-item">
+
+                   </a>
+                   <a class="sidebar-item">
+
+                   </a>  
+                </div>
             </div>
             <div class="main__middle">
-                <div>Feed</div>
+
             </div>
             <div class="main__right">
-                <div>Other Notis</div>
+
             </div>
         </div>
     </main>
