--- a/index.html
+++ b/index.html
@@ -37,14 +37,18 @@
         <!--===========LEFT-GRID=======================-->
             <div class="left">
                 <!--PROFILE-->
-                <div class="profile">
-                    <img  class="profile-photo" src="./images/profile-1.jpg">
+                <a class="profile">
+                    <div  class="profile-photo">
+                          <img src="./images/profile-1.jpg">
+                    </div>    
+                    <div class="handle">
                     <h4  class="profile__handle">Diana</h4>
                     <p class="text-muted">@diana</p>
-                </div>
+                    </div>
+                </a>
                 <!--SIDEBAR-->
                 <div class="sidebar">
-                   <a class="sidebar-item active">
+                   <a class="sidebar-item  active">
                     <span><i class="fa-solid fa-house"></i></span><h3>Home</h3>
                    </a> 
                    <a class="sidebar-item">
@@ -52,9 +56,9 @@
                    </a>
                    <!--NOTIFICATIONS-->
                    <a class="sidebar-item" id="notifications">
-                    <span><i class="fa-solid fa-bell"></i></span><small class="notification-count"> 9+</small><h3>Notifications</h3>
+                    <span><i class="fa-solid fa-bell"></i></span><!--<small class="notification-count"> 9+</small>--><h3>Notifications</h3>
                     <!--POPUP FOR NOTIFICATION-->
-                    <div class="notfication-popup">
+                    <div class="notification-popup">
                         <div class="notifcation-photo profile-photo">
                             <img src="./images/profile-2.jpg">
                         </div>
@@ -84,8 +88,9 @@
                         </div>
                         <small>2 MINUTES AGO</small>
                     </div>
+                   </a> 
                    <a class="sidebar-item" id="messages">
-                    <span><i class="fa-solid fa-inbox"></i></span><small class="message-count"> 5+</small><h3>Messages</h3>
+                    <span><i class="fa-solid fa-inbox"></i></span><!--<small class="notification-count"> 5+</small>--><h3>Messages</h3>
                    </a>
                    <a class="sidebar-item">
                     <span><i class="fa-solid fa-user-group"></i></span><h3>Friends</h3>
@@ -93,13 +98,12 @@
                    <a class="sidebar-item">
                     <span><i class="fa-solid fa-sun"></i></span><h3>Theme</h3>
                    </a>
-                   <a class="sidebar-item">
+                   <a class="sidebar-item active">
                     <span><i class="fa-solid fa-gear"></i></span><h3>Settings</h3>
                    </a>
-
-                   <!--ENDING THE SIDEBAR WITH A CTA-BUTTON-->
-                   <label for="create-post" class="button button__primary">Create</label>
                 </div>
+                <!--ENDING THE SIDEBAR WITH A CTA-BUTTON-->
+                <label for="create-post" class="button button__primary">Create</label>
             </div>
             <div class="middle">
 
