--- a/index.html
+++ b/index.html
@@ -105,9 +105,58 @@
                 <!--ENDING THE SIDEBAR WITH A CTA-BUTTON-->
                 <label for="create-post" class="button button__primary">Create</label>
             </div>
-            <div class="middle">
 
+            <div class="middle">
+                <!--STORIES-->
+                <div class="stories">
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./images/profile-6.jpg">
+                        </div>
+                        <p class="name">Person 6</p>
+                    </div>
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./images/profile-7.jpg">
+                        </div>
+                        <p class="name">Person 7</p>
+                    </div>
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./images/profile-8.jpg">
+                        </div>
+                        <p class="name">Person 8</p>
+                    </div>
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./images/profile-9.jpg">
+                        </div>
+                        <p class="name">Person 9</p>
+                    </div>
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./images/profile-10.jpg">
+                        </div>
+                        <p class="name">Person 10</p>
+                    </div>
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./images/profile-11.jpg">
+                        </div>
+                        <p class="name">Person 11</p>
+                    </div>
+                </div>
+
+                <!--END OF STORIES/START OF CREATE POST FORM-->
+                <form class="create-post">
+                    <div class="profile-photo">
+                        <img src="./images/profile-1.jpg    ">
+                    </div>    
+                    <input type="text" placeholder="What's on your mind,Diana?" id="create-post">
+                    <input type="submit" value="post" class="button button__primary">
+                </form>
             </div>
+
             <div class="right">
 
             </div>
