--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.svg">
     <title>MojoSocial</title>
 </head>
 
@@ -34,73 +35,82 @@
     <!--MAIN-->
     <main>
         <div class="container">
-        <!--===========LEFT-GRID=======================-->
+            <!--===========LEFT-GRID=======================-->
             <div class="left">
                 <!--PROFILE-->
                 <a class="profile">
-                    <div  class="profile-photo">
-                          <img src="./images/profile-1.jpg">
-                    </div>    
+                    <div class="profile-photo">
+                        <img src="./images/profile-1.jpg">
+                    </div>
                     <div class="handle">
-                    <h4  class="profile__handle">Diana</h4>
-                    <p class="text-muted">@diana</p>
+                        <h4 class="profile__handle">Diana</h4>
+                        <p class="text-muted">@diana</p>
                     </div>
                 </a>
                 <!--SIDEBAR-->
                 <div class="sidebar">
-                   <a class="sidebar-item  active">
-                    <span><i class="fa-solid fa-house"></i></span><h3>Home</h3>
-                   </a> 
-                   <a class="sidebar-item">
-                    <span><i class="fa-solid fa-compass"></i></span><h3>Explore</h3>
-                   </a>
-                   <!--NOTIFICATIONS-->
-                   <a class="sidebar-item" id="notifications">
-                    <span><i class="fa-solid fa-bell"></i></span><!--<small class="notification-count"> 9+</small>--><h3>Notifications</h3>
-                    <!--POPUP FOR NOTIFICATION-->
-                    <div class="notification-popup">
-                        <div class="notifcation-photo profile-photo">
-                            <img src="./images/profile-2.jpg">
+                    <a class="sidebar-item  active">
+                        <span><i class="fa-solid fa-house"></i></span>
+                        <!--<h3>Home</h3>-->
+                    </a>
+                    <a class="sidebar-item">
+                        <span><i class="fa-solid fa-compass"></i></span>
+                        <!--<h3>Explore</h3>-->
+                    </a>
+                    <!--NOTIFICATIONS-->
+                    <a class="sidebar-item" id="notifications">
+                        <span><i
+                                class="fa-solid fa-bell"></i></span><!--<small class="notification-count"> 9+</small>-->
+                        <!--<h3>Notifications</h3>-->
+                        <!--POPUP FOR NOTIFICATION-->
+                        <div class="notification-popup">
+                            <div class="notifcation-photo profile-photo">
+                                <img src="./images/profile-2.jpg">
+                            </div>
+                            <div class="notification-user">
+                                <b>Person 1</b> commented on your post.
+                            </div>
+                            <small>2 MINUTES AGO</small>
+                            <div class="notifcation-photo profile-photo">
+                                <img src="./images/profile-3.jpg">
+                            </div>
+                            <div class="notification-user">
+                                <b>Person 2</b> commented on your post.
+                            </div>
+                            <small>2 MINUTES AGO</small>
+                            <div class="notifcation-photo profile-photo">
+                                <img src="./images/profile-4.jpg">
+                            </div>
+                            <div class="notification-user">
+                                <b>Person 3</b> commented on your post.
+                            </div>
+                            <small>2 MINUTES AGO</small>
+                            <div class="notifcation-photo profile-photo">
+                                <img src="./images/profile-5.jpg">
+                            </div>
+                            <div class="notification-user">
+                                <b>Person 4</b> commented on your post.
+                            </div>
+                            <small>2 MINUTES AGO</small>
                         </div>
-                        <div class="notification-user">
-                            <b>Person 1</b> commented on your post.
-                        </div>
-                        <small>2 MINUTES AGO</small>
-                        <div class="notifcation-photo profile-photo">
-                            <img src="./images/profile-3.jpg">
-                        </div>
-                        <div class="notification-user">
-                            <b>Person 2</b> commented on your post.
-                        </div>
-                        <small>2 MINUTES AGO</small>
-                        <div class="notifcation-photo profile-photo">
-                            <img src="./images/profile-4.jpg">
-                        </div>
-                        <div class="notification-user">
-                            <b>Person 3</b> commented on your post.
-                        </div>
-                        <small>2 MINUTES AGO</small>
-                        <div class="notifcation-photo profile-photo">
-                            <img src="./images/profile-5.jpg">
-                        </div>
-                        <div class="notification-user">
-                            <b>Person 4</b> commented on your post.
-                        </div>
-                        <small>2 MINUTES AGO</small>
-                    </div>
-                   </a> 
-                   <a class="sidebar-item" id="messages">
-                    <span><i class="fa-solid fa-inbox"></i></span><!--<small class="notification-count"> 5+</small>--><h3>Messages</h3>
-                   </a>
-                   <a class="sidebar-item">
-                    <span><i class="fa-solid fa-user-group"></i></span><h3>Friends</h3>
-                   </a>
-                   <a class="sidebar-item">
-                    <span><i class="fa-solid fa-sun"></i></span><h3>Theme</h3>
-                   </a>
-                   <a class="sidebar-item active">
-                    <span><i class="fa-solid fa-gear"></i></span><h3>Settings</h3>
-                   </a>
+                    </a>
+                    <a class="sidebar-item" id="messages">
+                        <span><i
+                                class="fa-solid fa-inbox"></i></span><!--<small class="notification-count"> 5+</small>-->
+                        <!--<h3>Messages</h3>-->
+                    </a>
+                    <a class="sidebar-item">
+                        <span><i class="fa-solid fa-user-group"></i></span>
+                        <!--<h3>Friends</h3>-->
+                    </a>
+                    <a class="sidebar-item">
+                        <span><i class="fa-solid fa-palette"></i></span>
+                        <!--<h3>Theme</h3>-->
+                    </a>
+                    <a class="sidebar-item active">
+                        <span><i class="fa-solid fa-gear"></i></span>
+                        <!--<h3>Settings</h3>-->
+                    </a>
                 </div>
                 <!--ENDING THE SIDEBAR WITH A CTA-BUTTON-->
                 <label for="create-post" class="button button__primary">Create</label>
@@ -151,10 +161,175 @@
                 <form class="create-post">
                     <div class="profile-photo">
                         <img src="./images/profile-1.jpg    ">
-                    </div>    
+                    </div>
                     <input type="text" placeholder="What's on your mind,Diana?" id="create-post">
                     <input type="submit" value="post" class="button button__primary">
                 </form>
+
+                <!--FEED BEGINS FROM HERE-->
+                <section class="feeds">
+                    <div class="feed">
+                        <div class="head">
+                            <div class="head-left">
+                                <div class="profile-photo">
+                                    <img src="./images/profile-1.jpg">
+                                </div>
+                                <div class="details">
+                                    <h4 class="name">Person 1</h4>
+                                    <p>some random location</p>
+                                </div>
+                            </div>
+                            <i class="fa-solid fa-hammer"></i>
+                        </div>
+                        <div class="photo">
+                            <img src="./images/feed-1.jpg">
+                        </div>
+                        <div class="action-buttons">
+                            <div class="action-button-left">
+                                <i class="fa-regular fa-heart"></i>
+                                <i class="fa-regular fa-comment"></i>
+                            </div>
+                            <div class="action-button-right">
+                                <i class="fa-regular fa-bookmark"></i>
+                            </div>
+                        </div>
+                        <div class="liked-by">
+                            <img src="./images/profile-11.jpg">
+                            <img src="./images/profile-12.jpg">
+                            <img src="./images/profile-13.jpg">
+                            <p><span>People</span> liked your upload.</p>
+                        </div>
+                    </div>
+                    <div class="feed">
+                        <div class="head">
+                            <div class="head-left">
+                                <div class="profile-photo">
+                                    <img src="./images/profile-2.jpg">
+                                </div>
+                                <div class="details">
+                                    <h4 class="name">Person 2</h4>
+                                    <p>some random location</p>
+                                </div>
+                            </div>
+                            <i class="fa-solid fa-hammer"></i>
+                        </div>
+                        <div class="photo">
+                            <img src="./images/feed-2.jpg">
+                        </div>
+                        <div class="action-buttons">
+                            <div class="action-button-left">
+                                <i class="fa-regular fa-heart"></i>
+                                <i class="fa-regular fa-comment"></i>
+                            </div>
+                            <div class="action-button-right">
+                                <i class="fa-regular fa-bookmark"></i>
+                            </div>
+                        </div>
+                        <div class="liked-by">
+                            <img src="./images/profile-11.jpg">
+                            <img src="./images/profile-12.jpg">
+                            <img src="./images/profile-13.jpg">
+                            <p><span>People</span> liked your upload.</p>
+                        </div>
+                    </div>
+                    <div class="feed">
+                        <div class="head">
+                            <div class="head-left">
+                                <div class="profile-photo">
+                                    <img src="./images/profile-3.jpg">
+                                </div>
+                                <div class="details">
+                                    <h4 class="name">Person 3</h4>
+                                    <p>some random location</p>
+                                </div>
+                            </div>
+                            <i class="fa-solid fa-hammer"></i>
+                        </div>
+                        <div class="photo">
+                            <img src="./images/feed-3.jpg">
+                        </div>
+                        <div class="action-buttons">
+                            <div class="action-button-left">
+                                <i class="fa-regular fa-heart"></i>
+                                <i class="fa-regular fa-comment"></i>
+                            </div>
+                            <div class="action-button-right">
+                                <i class="fa-regular fa-bookmark"></i>
+                            </div>
+                        </div>
+                        <div class="liked-by">
+                            <img src="./images/profile-11.jpg">
+                            <img src="./images/profile-12.jpg">
+                            <img src="./images/profile-13.jpg">
+                            <p><span>People</span> liked your upload.</p>
+                        </div>
+                    </div>
+                    <div class="feed">
+                        <div class="head">
+                            <div class="head-left">
+                                <div class="profile-photo">
+                                    <img src="./images/profile-4.jpg">
+                                </div>
+                                <div class="details">
+                                    <h4 class="name">Person 4</h4>
+                                    <p>some random location</p>
+                                </div>
+                            </div>
+                            <i class="fa-solid fa-hammer"></i>
+                        </div>
+                        <div class="photo">
+                            <img src="./images/feed-4.jpg">
+                        </div>
+                        <div class="action-buttons">
+                            <div class="action-button-left">
+                                <i class="fa-regular fa-heart"></i>
+                                <i class="fa-regular fa-comment"></i>
+                            </div>
+                            <div class="action-button-right">
+                                <i class="fa-regular fa-bookmark"></i>
+                            </div>
+                        </div>
+                        <div class="liked-by">
+                            <img src="./images/profile-11.jpg">
+                            <img src="./images/profile-12.jpg">
+                            <img src="./images/profile-13.jpg">
+                            <p><span>People</span> liked your upload.</p>
+                        </div>
+                    </div>
+                    <div class="feed">
+                        <div class="head">
+                            <div class="head-left">
+                                <div class="profile-photo">
+                                    <img src="./images/profile-5.jpg">
+                                </div>
+                                <div class="details">
+                                    <h4 class="name">Person 5</h4>
+                                    <p>some random location</p>
+                                </div>
+                            </div>
+                            <i class="fa-solid fa-hammer"></i>
+                        </div>
+                        <div class="photo">
+                            <img src="./images/feed-5.jpg">
+                        </div>
+                        <div class="action-buttons">
+                            <div class="action-button-left">
+                                <i class="fa-regular fa-heart"></i>
+                                <i class="fa-regular fa-comment"></i>
+                            </div>
+                            <div class="action-button-right">
+                                <i class="fa-regular fa-bookmark"></i>
+                            </div>
+                        </div>
+                        <div class="liked-by">
+                            <img src="./images/profile-11.jpg">
+                            <img src="./images/profile-12.jpg">
+                            <img src="./images/profile-13.jpg">
+                            <p><span>People</span> liked your upload.</p>
+                        </div>
+                    </div>
+                </section>
+            <!--FEED SECTION ENDS HERE-->
             </div>
 
             <div class="right">
