Right side started!

--- a/index.html
+++ b/index.html
@@ -331,9 +331,51 @@
                 </section>
             <!--FEED SECTION ENDS HERE-->
             </div>
-
+            <!--===================RIGHT-SECTION==============================-->
             <div class="right">
-
+                <div class="messages">
+                    <div class="heading">
+                        <h4>Messages</h4><i class="fa-solid fa-pen-to-square"></i>
+                    </div>
+                    <!-- SEARCH BAR-->
+                    <div class="search-bar">
+                        <input type="search" placeholder="Search Users" id="message-search">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </div>
+                    <!--MESSAGES CATEGORY---->
+                    <div class="category">
+                        <h6 class="active">Primary</h6>
+                        <h6>General</h6>
+                        <h6 class="message-requests">Requests</h6>
+                    </div>
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./images/profile-15.jpg">
+                        </div>
+                        <div class="message-body">
+                            <h4>Person-15</h4>
+                            <p class="text__muted">This is some message!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="friend-requests">
+                    <h4>Requests</h4>
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./images/profile-10.jpg">
+                            </div>
+                            <div>
+                                <h5>Person 10</h5>
+                                <p class="text__muted">2 mutual friends.</p>
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="button button__primary">Accept</button>
+                            <button class="button button__primary" style="background-color:gray;color:white;">Decline</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
