Friend Request section created.

--- a/index.html
+++ b/index.html
@@ -367,7 +367,46 @@
                             </div>
                             <div>
                                 <h5>Person 10</h5>
-                                <p class="text__muted">2 mutual friends.</p>
+                                <p class="text__muted">3 mutual friends.</p>
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="button button__primary">Accept</button>
+                            <button class="button button__primary" style="background-color:gray;color:white;">Decline</button>
+                        </div>
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./images/profile-11.jpg">
+                            </div>
+                            <div>
+                                <h5>Person 11</h5>
+                                <p class="text__muted">4 mutual friends.</p>
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="button button__primary">Accept</button>
+                            <button class="button button__primary" style="background-color:gray;color:white;">Decline</button>
+                        </div>
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./images/profile-12.jpg">
+                            </div>
+                            <div>
+                                <h5>Person 12</h5>
+                                <p class="text__muted">5 mutual friends.</p>
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="button button__primary">Accept</button>
+                            <button class="button button__primary" style="background-color:gray;color:white;">Decline</button>
+                        </div>
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./images/profile-13.jpg">
+                            </div>
+                            <div>
+                                <h5>Person 13</h5>
+                                <p class="text__muted">6 mutual friends.</p>
                             </div>
                         </div>
                         <div class="action">
