Customise-view added.

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                         </div>
                     </div>
                 </section>
-            <!--FEED SECTION ENDS HERE-->
+                <!--FEED SECTION ENDS HERE-->
             </div>
             <!--===================RIGHT-SECTION==============================-->
             <div class="right">
@@ -357,6 +357,33 @@
                             <p class="text__muted">This is some message!</p>
                         </div>
                     </div>
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./images/profile-16.jpg">
+                        </div>
+                        <div class="message-body">
+                            <h4>Person-16</h4>
+                            <p class="text__muted">This is some message!</p>
+                        </div>
+                    </div>
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./images/profile-17.jpg">
+                        </div>
+                        <div class="message-body">
+                            <h4>Person-17</h4>
+                            <p class="text__muted">This is some message!</p>
+                        </div>
+                    </div>
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./images/profile-18.jpg">
+                        </div>
+                        <div class="message-body">
+                            <h4>Person-18</h4>
+                            <p class="text__muted">This is some message!</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="friend-requests">
                     <h4>Requests</h4>
@@ -372,7 +399,8 @@
                         </div>
                         <div class="action">
                             <button class="button button__primary">Accept</button>
-                            <button class="button button__primary" style="background-color:gray;color:white;">Decline</button>
+                            <button class="button button__primary"
+                                style="background-color:gray;color:white;">Decline</button>
                         </div>
                         <div class="info">
                             <div class="profile-photo">
@@ -385,7 +413,8 @@
                         </div>
                         <div class="action">
                             <button class="button button__primary">Accept</button>
-                            <button class="button button__primary" style="background-color:gray;color:white;">Decline</button>
+                            <button class="button button__primary"
+                                style="background-color:gray;color:white;">Decline</button>
                         </div>
                         <div class="info">
                             <div class="profile-photo">
@@ -398,7 +427,8 @@
                         </div>
                         <div class="action">
                             <button class="button button__primary">Accept</button>
-                            <button class="button button__primary" style="background-color:gray;color:white;">Decline</button>
+                            <button class="button button__primary"
+                                style="background-color:gray;color:white;">Decline</button>
                         </div>
                         <div class="info">
                             <div class="profile-photo">
@@ -411,13 +441,68 @@
                         </div>
                         <div class="action">
                             <button class="button button__primary">Accept</button>
-                            <button class="button button__primary" style="background-color:gray;color:white;">Decline</button>
+                            <button class="button button__primary"
+                                style="background-color:gray;color:white;">Decline</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </main>
+    <!----------------------THEME-CUSTOMISATION----------------------------->
+    <div class="customise-theme">
+        <div class="card">
+            <h2>Customise your View</h2>
+            <p class="text__muted">Manage font-size,color,and background.</p>
+
+            <!--FONT-SIZES-->
+            <div class="font-size">
+                <h4>Font Size</h4>
+                <div>
+                    <h6>Aa</h6>
+                    <div class="choose-size">
+                        <span class="font-size-1 active"></span>
+                        <span class="font-size-2"></span>
+                        <span class="font-size-3"></span>
+                        <span class="font-size-4"></span>
+                        <span class="font-size-5"></span>
+                    </div>
+                    <h3>Aa</h3>
+                </div>
+            </div>
+            <!--COLOR-OPTIONS-->
+            <div class="color-options">
+                <h4>Choose your Color</h4>
+                <div>
+                    <div class="pick-color">
+                        <span class="color-1"></span>
+                        <span class="color-2"></span>
+                        <span class="color-3"></span>
+                        <span class="color-4"></span>
+                        <span class="color-5"></span>
+                    </div>
+                </div>
+            </div>
+            <!--BACKGROUND-->
+            <div class="background">
+                <h4>Background</h4>
+                <div class="background-picker">
+                    <div class="light">
+                        <span></span>
+                        <h6>Light</h6>
+                    </div>
+                    <div class="dim">
+                        <span></span>
+                        <h6>Dim</h6>
+                    </div>
+                    <div class="lights-out">
+                        <span></span>
+                        <h6>lights-out</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
