Script loaded,highlight and active class switch added!

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </a>
                 <!--SIDEBAR-->
                 <div class="sidebar">
-                    <a class="sidebar-item  active">
+                    <a class="sidebar-item active">
                         <span><i class="fa-solid fa-house"></i></span>
                         <!--<h3>Home</h3>-->
                     </a>
@@ -107,7 +107,7 @@
                         <span><i class="fa-solid fa-palette"></i></span>
                         <!--<h3>Theme</h3>-->
                     </a>
-                    <a class="sidebar-item active">
+                    <a class="sidebar-item">
                         <span><i class="fa-solid fa-gear"></i></span>
                         <!--<h3>Settings</h3>-->
                     </a>
@@ -333,7 +333,7 @@
             </div>
             <!--===================RIGHT-SECTION==============================-->
             <div class="right">
-                <div class="messages">
+                <div class="messages" id="message-highlight">
                     <div class="heading">
                         <h4>Messages</h4><i class="fa-solid fa-pen-to-square"></i>
                     </div>
@@ -344,9 +344,9 @@
                     </div>
                     <!--MESSAGES CATEGORY---->
                     <div class="category">
-                        <h6 class="active">Primary</h6>
+                        <h6>Primary</h6>
                         <h6>General</h6>
-                        <h6 class="message-requests">Requests</h6>
+                        <h6>Requests</h6>
                     </div>
                     <div class="message">
                         <div class="profile-photo">
@@ -461,7 +461,7 @@
                 <div>
                     <h6>Aa</h6>
                     <div class="choose-size">
-                        <span class="font-size-1 active"></span>
+                        <span class="font-size-1"></span>
                         <span class="font-size-2"></span>
                         <span class="font-size-3"></span>
                         <span class="font-size-4"></span>
@@ -475,7 +475,7 @@
                 <h4>Choose your Color</h4>
                 <div>
                     <div class="pick-color">
-                        <span class="color-1 active"></span>
+                        <span class="color-1"></span>
                         <span class="color-2"></span>
                         <span class="color-3"></span>
                         <span class="color-4"></span>
@@ -487,7 +487,7 @@
             <div class="background">
                 <h4>Background</h4>
                 <div class="background-picker">
-                    <div class="light active">
+                    <div class="light">
                         <span></span>
                         <h6>Light</h6>
                     </div>
@@ -503,7 +503,7 @@
             </div>
         </div>
     </div>
-
+<script src="./app.js"></script>
 </body>
 
 </html>
