--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <span><i class="fa-solid fa-user-group"></i></span>
                         <!--<h3>Friends</h3>-->
                     </a>
-                    <a class="sidebar-item">
+                    <a class="sidebar-item" id="theme">
                         <span><i class="fa-solid fa-palette"></i></span>
                         <!--<h3>Theme</h3>-->
                     </a>
