--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                     <div class="choose-size">
                         <span class="font-size-1"></span>
                         <span class="font-size-2"></span>
-                        <span class="font-size-3"></span>
+                        <span class="font-size-3 active"></span>
                         <span class="font-size-4"></span>
                         <span class="font-size-5"></span>
                     </div>
@@ -475,7 +475,7 @@
                 <h4>Choose your Color</h4>
                 <div>
                     <div class="pick-color">
-                        <span class="color-1"></span>
+                        <span class="color-1 active"></span>
                         <span class="color-2"></span>
                         <span class="color-3"></span>
                         <span class="color-4"></span>
@@ -487,7 +487,7 @@
             <div class="background">
                 <h4>Background</h4>
                 <div class="background-picker">
-                    <div class="light">
+                    <div class="light active">
                         <span></span>
                         <h6>Light</h6>
                     </div>
